@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1392 2023/05/09 18:07:03 wiz Exp $
+# $NetBSD: Makefile,v 1.1393 2023/05/09 19:57:35 wiz Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -1194,7 +1194,6 @@ SUBDIR+=	py-yaml
 SUBDIR+=	py-yamllint
 SUBDIR+=	py-yamlordereddictloader
 SUBDIR+=	py27-cssselect2
-SUBDIR+=	py27-markupsafe
 SUBDIR+=	py27-pyphen
 SUBDIR+=	py27-tinycss2
 SUBDIR+=	qore-json-module
