@@ -1,1 +1,0 @@
-MarkupSafe implements a unicode subclass that supports HTML strings.
