@@ -1,19 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/04/19 11:06:43 tnn Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/markupsafe/__init__.py
-${PYSITELIB}/markupsafe/__init__.pyc
-${PYSITELIB}/markupsafe/__init__.pyo
-${PYSITELIB}/markupsafe/_compat.py
-${PYSITELIB}/markupsafe/_compat.pyc
-${PYSITELIB}/markupsafe/_compat.pyo
-${PYSITELIB}/markupsafe/_constants.py
-${PYSITELIB}/markupsafe/_constants.pyc
-${PYSITELIB}/markupsafe/_constants.pyo
-${PYSITELIB}/markupsafe/_native.py
-${PYSITELIB}/markupsafe/_native.pyc
-${PYSITELIB}/markupsafe/_native.pyo
-${PYSITELIB}/markupsafe/_speedups.c
-${PYSITELIB}/markupsafe/_speedups.so
